# advent-of-code-2024

./: README.md  mise.toml  pyproject.toml  stdlib.py  tasks.py  template.py
day_01/: day_01.py
day_02/: day_02.py
day_03/: day_03.py
day_04/: day_04.py
day_05/: day_05.py
day_06/: day_06.py
day_07/: day_07.py
day_08/: day_08.py
day_09/: day_09.py
day_10/: day_10.py
day_11/: day_11.py
day_12/: day_12.py
day_13/: day_13.py
day_14/: day_14.py
day_15/: day_15.py
day_16/: day_16.py
day_17/: day_17.py  device_optimized.pyx  interp.pyx
day_18/: day_18.py
day_19/: day_19.py
day_20/: day_20.py
day_21/: day_21.py
day_22/: day_22.py  pseudorandom.pyx
day_23/: day_23.py
day_24/: day_24.py
day_25/: day_25.py
